<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"><b>FTS</b></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="color">red</string>
    <string name="customize"><u>Tùy chỉnh lộ trình</u></string>
    <string name="route"><b>LỘ TRÌNH</b></string>
    <string name="changeRoute">THAY ĐỔI LỘ TRÌNH</string>
    <string name="startPoint">Địa điểm bắt đầu</string>
    <string name="startPoint1">Địa điểm bắt đầu:</string>
    <string name="point1">Địa điểm đi qua 1</string>
    <string name="point11">Địa điểm đi qua 1:</string>
    <string name="point2">Địa điểm đi qua 2</string>
    <string name="point21">Địa điểm đi qua 2:</string>
    <string name="startDate">Ngày bắt đầu</string>
    <string name="startDate1">Ngày bắt đầu:</string>
    <string name="startHour">Giờ bắt đầu</string>
    <string name="endPoint">Địa điểm kết thúc</string>
    <string name="endPoint1">Địa điểm kết thúc:</string>
    <string name="endDate">Ngày kết thúc</string>
    <string name="endDate1">Ngày kết thúc:</string>
    <string name="payload">Khối lượng có thể chở</string>
    <string name="payload1">Khối lượng có thể chở:</string>
    <string name="cantLoad"><u>Loại hàng không chở</u></string>
    <string name="cantLoad1">Loại hàng không chở:</string>
    <string name="frozen">Hàng đông lạnh</string>
    <string name="easyToBreak">Hàng dễ vỡ</string>
    <string name="food">Hàng thực phẩm</string>
    <string name="flamable">Hàng dễ cháy nổ</string>
    <string name="create">TẠO MỚI</string>
    <string name="create2">TẠO</string>
    <string name="change">CẬP NHẬT</string>
    <string name="delete">HỦY</string>
    <string name="time"><b>THỜI GIAN</b></string>
    <string name="otherInfo"><b>HÀNG HÓA</b></string>
    <string name="pass">Mật khẩu</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="sendPlace">Nơi giao hàng:</string>
    <string name="receivePlace">Nơi nhận hàng:</string>
    <string name="sentTime">Thời gian giao hàng:</string>
    <string name="receiveTime">Thời gian nhận hàng:</string>
    <string name="kg">kg</string>
    <string name="price">Giá giao dịch:</string>
    <string name="sendStatus">Trạng thái giao hàng:</string>
    <string name="sendWeight">Khối lượng hàng:</string>
    <string name="noOrder">Không có hóa đơn nào</string>
    <string name="noRoute">Không có lộ trình nào</string>
    <string name="noOffer">Không có đề nghị nào</string>
    <string name="noSuggest">Không có gợi ý nào</string>
    <string name="note">Ghi chú:</string>
    <string name="note2">Ghi chú</string>
    <string name="suggestPrice">Giá đề nghị (ngàn đồng):</string>
    <string name="suggest">XEM GỢI Ý</string>
    <string name="send">GỬI</string>
    <string name="save">LƯU</string>
    <string name="noGood">Không có hàng nào</string>
    <string name="noNoti">Không có thông báo nào</string>
    <string name="status">Trạng thái:</string>
    <string name="counter">GỬI ĐỀ NGHỊ MỚI</string>
    <string name="sent">Đã chuyển hàng</string>
    <string name="accept">Chấp nhận</string>
    <string name="decline">Từ chối</string>
    <string name="addPoints"><u>Thêm điểm đi qua</u></string>
    <string name="ownerPhone">Số điện thoại chủ hàng:</string>
    <string name="remember">Ghi nhớ</string>
    <string name="goodSent">Đã giao hàng</string>
    <string name="call">Gọi chủ hàng</string>
    <string name="deleteOrder">Hủy hóa đơn</string>
    <string name="oldPrice">Giá cũ:</string>
    <string name="search">Tìm kiếm</string>

    <string-array name="navigation_drawer_items_array">
        <item>Lộ trình</item>
        <item>Đề nghị</item>
        <item>Lịch sử</item>
        <item>Hóa đơn</item>
        <item>Đăng xuất</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_person</item>
        <item>@drawable/ic_action_place</item>
        <item>@drawable/ic_action_sort_by_size</item>
        <item>@drawable/ic_action_event</item>
        <item>@drawable/ic_action_copy</item>
        <item>@drawable/ic_action_not_secure</item>
    </array>

    <string name="title_activity_current_route">CurrentRoute</string>
    <string name="title_activity_create_route">CreateRoute</string>
    <string name="title_activity_change_route">ChangeRoute</string>
    <string name="title_activity_deal_view">DealView</string>
    <string name="title_activity_deals">Deals</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_history_detail">HistoryDetail</string>
    <string name="title_activity_offer_response">OfferResponse</string>
    <string name="title_activity_send_offer">SendOffer</string>
    <string name="title_activity_system_suggest">SystemSuggest</string>
    <string name="title_activity_tab_deals">TabDeals</string>
    <string name="title_activity_deals2">Deals2</string>
    <string name="title_activity_route_list">RouteList</string>
    <string name="title_activity_customize_route">CustomizeRoute</string>
    <string name="title_activity_suggest_list">SuggestList</string>
    <string name="title_activity_cancel_offer">CancelOffer</string>
    <string name="title_activity_login">FTS Driver</string>
    <string name="title_activity_deal_history">DealHistory</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_deal_history_detail">DealHistoryDetail</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_map">Map</string>

</resources>