<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="50dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#B0BEC5"
    tools:context="vn.edu.fpt.fts.layout.Login" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:text="@string/title_activity_login" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:hint="Email"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:background="@android:color/white"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/pass"
            android:paddingLeft="8dp"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:onClick="checkLogin"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/button"
            android:text="@string/login" />
    </LinearLayout>

</RelativeLayout>